--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   </title>
 
   <meta name="description" content="<%= htmlWebpackPlugin.options.title %>">
-
+  <link href="./view/style.css" rel="stylesheet">
 </head>
 
 <body>
