Fixed min and max values bugs

--- a/src/index.html
+++ b/src/index.html
@@ -28,87 +28,265 @@
       height: 20px;
       width: 100px;
     }
+    .control {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-end;
+    }
+    label {
+      white-space: nowrap;
+    }
   </style>
 
   <body>
     <div class="slider">
-    <div class="slider1"></div>
-  </div>
-  <div class="slider">
-    <div class="slider2"></div>
-  </div>
-  <div class="slider">
-    <div class="slider3"></div>
-  </div>
-  <div class="slider">
-    <div class="slider4"></div>
-  </div>
-  <div class="slider">
-    <div class="slider5"></div>
-  </div>
+      <div class="slider1"></div>
+    </div>
+    <div class="slider">
+      <div class="slider2"></div>
+    </div>
+    <div class="slider">
+      <div class="slider3"></div>
+    </div>
+    <div class="slider">
+      <div class="slider4"></div>
+    </div>
+    <div class="slider">
+      <div class="slider5"></div>
+    </div>
 
     <script src="lib/jquery.js"></script>
     <script>
-      $('.slider1').slider({
-      minVal: 200, 
-      maxVal: 500, 
-      stepVal: 100,
-      value: 349,
-      followerPoint: true
-    })
-    $('.slider2').slider({
-      minVal: 10, 
-      maxVal: 20, 
-      stepVal: 1,
-      value: 18,
-      orientation: 'vertical'
-    })
-    $('.slider3').slider({
-      minVal: 10, 
-      maxVal: 20, 
-      stepVal: 1,
-      range: true,
-      values: [12, 15],
-      followerPoint: true,
-      orientation: 'vertical'
-    })
-    $('.slider4').slider({
-      minVal: 1, 
-      maxVal: 100, 
-      stepVal: 1,
-      range: true,
-      values: [12, 50]
-    })
-    $('.slider5').slider();
+      $(function () {
+        $(".slider1").slider({
+          minVal: 200,
+          maxVal: 500,
+          stepVal: 100,
+          value: 349,
+          followerPoint: true,
+        });
+        $(".slider2").slider({
+          minVal: 10,
+          maxVal: 20,
+          stepVal: 1,
+          value: 18,
+          orientation: "vertical",
+        });
+        $(".slider3").slider({
+          minVal: 10,
+          maxVal: 20,
+          stepVal: 1,
+          range: true,
+          values: [12, 15],
+          followerPoint: true,
+          orientation: "vertical",
+        });
+        $(".slider4").slider({
+          range: true,
+        });
+        $(".slider5").slider();
 
-    $('.slider').each(function (i,val){
-        let newInput = document.createElement('input');
-        newInput.setAttribute('type', 'text');
-        $(this).append(newInput);
+        $(".slider").each(function (i, val) {
+          let container = document.createElement("div");
+          container.classList.add("control");
+          $(this).append(container);
+          let slider = this.firstElementChild;
 
-        let slider = this.lastElementChild;
+          initFollowerPintCheckboxes(container, slider);
+          initOrientation(container, slider);
+          initRange(container, slider);
+          initMinMax(container, slider);
+          initStep(container, slider);
+          initValueInputs(container, slider);
+        });
 
-        if($(slider).slider('option', 'range')){
-            let newInput2 = document.createElement('input');
-            newInput.setAttribute('type', 'text');
-            $(this).append(newInput);
+        function initStep(container, slider){
+      let ilabel1 = document.createElement('label');
+        ilabel1.innerHTML = 'Step';
+        $(container).append(ilabel1);
 
-            $(newInput).val($(slider).slider('option', 'values', 0))
-            $(newInput).on('change', ()=>{
-                $(slider).slider('option', 'values', $(newInput).val());
-            });
-            $(slider).on('changePointer', ()=>{
-                $(newInput).val($(slider).slider('option', 'values'))
-            })
+        let newInput1 = document.createElement('input');
+        newInput1.setAttribute('type', 'text');
+        $(ilabel1).append(newInput1);       
+
+        $(newInput1).val($(slider).slider('option', 'stepVal'))
+        $(newInput1).on('change', ()=>{
+            $(slider).slider('option', 'stepVal', $(newInput1).val());
+        });
+
+
+    }
+
+    function initMinMax(container, slider){
+      let ilabel1 = document.createElement('label');
+        ilabel1.innerHTML = 'Max';
+        $(container).append(ilabel1);
+
+        let newInput1 = document.createElement('input');
+        newInput1.setAttribute('type', 'text');
+        $(ilabel1).append(newInput1);
+
+      let ilabel2 = document.createElement('label');
+        ilabel2.innerHTML = 'Min';
+        $(container).append(ilabel2);
+
+        let newInput2 = document.createElement('input');
+        newInput2.setAttribute('type', 'text');
+        $(ilabel2).append(newInput2);
+
+
+        $(newInput1).val($(slider).slider('option', 'maxVal'))
+        $(newInput2).val($(slider).slider('option', 'minVal'))
+        $(newInput1).on('change', ()=>{
+            $(slider).slider('option', 'maxVal', $(newInput1).val());
+        });
+        $(newInput2).on('change', ()=>{
+            $(slider).slider('option', 'minVal', $(newInput2).val());
+        });
+
+    }
+
+    function initRange(container, slider){
+        let ilabel1 = document.createElement('label');
+        ilabel1.innerHTML = 'false';
+        $(container).append(ilabel1);
+
+        let newInput1 = document.createElement('input');
+        newInput1.setAttribute('type', 'radio');
+        newInput1.setAttribute('name', 'range'+String(slider.classList).substring(0, 7));
+        $(ilabel1).append(newInput1);
+
+        let ilabel2 = document.createElement('label');
+        ilabel2.innerHTML = 'true';
+        $(container).append(ilabel2);
+
+        let newInput2 = document.createElement('input');
+        newInput2.setAttribute('type', 'radio');
+        newInput2.setAttribute('name', 'range'+String(slider.classList).substring(0, 7));
+        $(ilabel2).append(newInput2);
+
+
+        if($(slider).slider('option', 'range') === true){
+            newInput2.checked = true;
         }else{
-            $(newInput).val($(slider).slider('option', 'value'))
-            $(newInput).on('change', ()=>{
-                $(slider).slider('option', 'value', $(newInput).val());
-            });
-            $(slider).on('changePointer', ()=>{
-                $(newInput).val($(slider).slider('option', 'value'))
-            })
+            newInput1.checked = true;
         }
+
+        $(ilabel1).change(function() {
+            $(slider).slider('option', 'range', false);
+            $('.val'+String(slider.classList).substring(0, 7)).remove();
+            initValueInputs(container, slider);
+        })
+        $(ilabel2).change(function() {
+            $(slider).slider('option', 'range', true);
+            $('.val'+String(slider.classList).substring(0, 7)).remove();
+            initValueInputs(container, slider);
+        })
+
+
+    }
+
+    function initOrientation(container, slider){
+        let ilabel1 = document.createElement('label');
+        ilabel1.innerHTML = 'Horizontal';
+        $(container).append(ilabel1);
+
+        let newInput1 = document.createElement('input');
+        newInput1.setAttribute('type', 'radio');
+        newInput1.setAttribute('name', 'ori'+String(slider.classList).substring(0, 7));
+        $(ilabel1).append(newInput1);
+
+        let ilabel2 = document.createElement('label');
+        ilabel2.innerHTML = 'Vertical';
+        $(container).append(ilabel2);
+
+        let newInput2 = document.createElement('input');
+        newInput2.setAttribute('type', 'radio');
+        newInput2.setAttribute('name', 'ori'+String(slider.classList).substring(0, 7));
+        $(ilabel2).append(newInput2);
+
+        if($(slider).slider('option', 'orientation') === 'horizontal'){
+            newInput1.checked = true;
+        }else{
+            newInput2.checked = true;
+        }
+
+        $(ilabel1).change(function() {
+            $(slider).slider('option', 'orientation', 'horizontal');
+        })
+        $(ilabel2).change(function() {
+            $(slider).slider('option', 'orientation', 'vertical');
+        })
+    }
+
+        function initFollowerPintCheckboxes(container, slider) {
+          let ilabel = document.createElement("label");
+          ilabel.innerHTML = "Follower point";
+          $(container).append(ilabel);
+
+          let checkbox = document.createElement("input");
+          checkbox.setAttribute("type", "checkbox");
+          $(ilabel).append(checkbox);
+
+          if ($(slider).slider("option", "followerPoint")) {
+            checkbox.checked = true;
+          }
+
+          $(checkbox).change(function () {
+            if (checkbox.checked) {
+              $(slider).slider("option", "followerPoint", true);
+            } else {
+              $(slider).slider("option", "followerPoint", false);
+            }
+          });
+        }
+
+        function initValueInputs(container, slider) {
+          let ilabel = document.createElement("label");
+          ilabel.setAttribute('class', 'val'+String(slider.classList).substring(0, 7));
+          ilabel.innerHTML = "First pointer";
+          $(container).append(ilabel);
+
+          let newInput = document.createElement("input");
+          newInput.setAttribute("type", "text");
+          $(ilabel).append(newInput);
+
+          if ($(slider).slider("option", "range")) {
+            let ilabel2 = document.createElement("label");
+            ilabel2.setAttribute('class', 'val'+String(slider.classList).substring(0, 7));
+            ilabel2.innerHTML = "Second pointer";
+            $(container).append(ilabel2);
+
+            let newInput2 = document.createElement("input");
+            newInput2.setAttribute("type", "text");
+            $(ilabel2).append(newInput2);
+
+            $(newInput).val($(slider).slider("option", "values", 0));
+            $(newInput2).val($(slider).slider("option", "values", 1));
+
+            $(newInput).on("change", () => {
+              $(slider).slider("option", "values", 0, $(newInput).val());
+            });
+            $(newInput2).on("change", () => {
+              $(slider).slider("option", "values", 1, $(newInput2).val());
+            });
+
+            $(slider).on("changePointer", () => {
+              $(newInput).val($(slider).slider("option", "values", 0));
+              $(newInput2).val($(slider).slider("option", "values", 1));
+            });
+          } else {
+            $(newInput).val($(slider).slider("option", "value"));
+            $(newInput).on("change", () => {
+              $(slider).slider("option", "value", $(newInput).val());
+            });
+            $(slider).on("changePointer", () => {
+              $(newInput).val($(slider).slider("option", "value"));
+            });
+          }
+        }
+      });
     </script>
   </body>
 </html>
